Fix cutting off of posts

--- a/static_server/index.css
+++ b/static_server/index.css
@@ -20,7 +20,7 @@ div.m {
     margin: 0;
     min-height: 100vh;
     display: grid;
-    place-content: center;
+    justify-content: center;
     gap: 20px;
     font-family: system-ui, sans-serif;
     font-size: 20px;
